# app/docs/swagger.json
@@ -9,7 +9,7 @@
     "paths": {
         "/healthcheck": {
             "get": {
-                "description": "just return HealthCheckModel with API status",
+                "description": "just return HealthCheckModel with API status (always return 200)",
                 "consumes": [
                     "application/json"
                 ],
@@ -21,7 +21,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/api.HealthCheckModel"
+                            "$ref": "#/definitions/api.healthCheckModel"
                         },
                         "headers": {
                             "X-Request-Id": {
@@ -46,8 +46,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Map vendor",
-                        "name": "vendor",
+                        "description": "Map provider",
+                        "name": "provider",
                         "in": "query",
                         "required": true
                     },
@@ -94,6 +94,12 @@
                                 "description": "request_id"
                             }
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.mapErrorModel"
+                        }
                     }
                 }
             }
@@ -114,7 +120,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/api.ProviderModel"
+                                "$ref": "#/definitions/api.providerModel"
                             }
                         },
                         "headers": {
@@ -129,7 +135,7 @@
         }
     },
     "definitions": {
-        "api.HealthCheckModel": {
+        "api.healthCheckModel": {
             "type": "object",
             "properties": {
                 "body": {
@@ -140,7 +146,18 @@
                 }
             }
         },
-        "api.ProviderModel": {
+        "api.mapErrorModel": {
+            "type": "object",
+            "properties": {
+                "body": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "integer"
+                }
+            }
+        },
+        "api.providerModel": {
             "type": "object",
             "properties": {
                 "key": {
