# app/server/api/api.go
@@ -2,9 +2,11 @@ package api
 
 import (
 	"fmt"
+	"net/http"
 	"time"
 
 	"github.com/superboomer/map-tile-provider/app/cache"
+	"github.com/superboomer/map-tile-provider/app/downloader"
 	"github.com/superboomer/map-tile-provider/app/options"
 	"github.com/superboomer/map-tile-provider/app/provider"
 	"go.uber.org/zap"
@@ -12,39 +14,34 @@ import (
 
 // API represent struct for business logic
 type API struct {
-	Cache     *cache.Cache
-	Providers provider.ListInterface
-	Logger    *zap.Logger
+	Cache      cache.Cache
+	Providers  provider.List
+	Downloader downloader.Downloader
+
+	Logger *zap.Logger
+
+	MaxSide int // max side value
 }
 
 // CreateAPI create API struct
-func CreateAPI(logger *zap.Logger, cacheOpts *options.Cache) (*API, error) {
+func CreateAPI(logger *zap.Logger, cacheOpts *options.Cache, providerSource string, maxSide int) (*API, error) {
 
-	pl := provider.CreateProviderList()
-
-	// Define a slice of provider names and their corresponding functions.
-	providers := map[string]func() provider.Provider{
-		"google":        provider.Google,
-		"arcgis":        provider.ArcGIS,
-		"openstreetmap": provider.OSM,
-	}
-
-	// Loop through the providers and register each one.
-	for name, f := range providers {
-		if err := pl.Register(f()); err != nil {
-			return nil, fmt.Errorf("error occurred when registering new provider %s: %w", name, err)
-		}
+	pl, err := provider.LoadProviderList(providerSource)
+	if err != nil {
+		return nil, fmt.Errorf("can't load provider list: %w", err)
 	}
 
 	api := &API{
-		Cache:     nil,
-		Logger:    logger,
-		Providers: pl,
+		Cache:      nil,
+		Logger:     logger,
+		Providers:  pl,
+		MaxSide:    maxSide,
+		Downloader: downloader.NewMapDownloader(http.DefaultClient),
 	}
 
 	if cacheOpts.Enable {
 		logger.Info("cache enabled", zap.String("path", cacheOpts.Path), zap.Duration("alive", time.Minute*time.Duration(cacheOpts.Alive)))
-		с, err := cache.LoadCache(cacheOpts.Path, time.Minute*time.Duration(cacheOpts.Alive))
+		с, err := cache.NewCache(cacheOpts.Path, time.Minute*time.Duration(cacheOpts.Alive))
 		if err != nil {
 			return nil, fmt.Errorf("can't load cache: %w", err)
 		}
