# app/server/api/map.go
@@ -1,6 +1,7 @@
 package api
 
 import (
+	"encoding/json"
 	"fmt"
 	"net/http"
 
@@ -9,88 +10,73 @@ import (
 
 	"go.uber.org/zap"
 
-	"github.com/superboomer/map-tile-provider/app/downloader"
+	"github.com/superboomer/map-tile-provider/app/provider"
 )
+
+// mapErrorModel contains data about error query
+type mapErrorModel struct {
+	Status int    `json:"status"`
+	Body   string `json:"body"`
+}
 
 // Map godoc
 // @Summary handler for generating satellite map for specified lat long and from specified vendor
 // @Description return merged satellite tiles in one image
 // @Accept  text/plain
 // @Produce image/jpeg
-// @Param vendor query string true "Map vendor"
+// @Param provider query string true "tile provider"
 // @Param lat query		 number	 true "latitude"
 // @Param long query		 number	 true "longitude"
 // @Param zoom query		 int true "zoom of image"
 // @Param side query		 int false "count of tile of result image square" default(3) minimum(1)		maximum(10)
 // @Success 200 {file} image/jpeg
+// @Failure 400 {object} mapErrorModel
 // @Header 200 {string} X-Request-Id "request_id"
 // @Router /map [get]
 func (a *API) Map(w http.ResponseWriter, req *http.Request) {
 
-	pVendor := req.URL.Query().Get("vendor")
-	if pVendor == "" {
-		http.Error(w, "vendor provider not specified", http.StatusBadRequest)
-		return
-	}
-
-	pLat := req.URL.Query().Get("lat")
-	pLatFloat, err := strconv.ParseFloat(strings.TrimSpace(pLat), 64)
+	params, vendor, err := a.parseRequest(req)
 	if err != nil {
-		http.Error(w, "lat parameter not specified", http.StatusBadRequest)
+		results, _ := json.Marshal(mapErrorModel{
+			Status: http.StatusBadRequest,
+			Body:   err.Error(),
+		})
+
+		w.Header().Set("Content-Type", "application/json")
+		w.WriteHeader(http.StatusBadRequest)
+		_, _ = w.Write(results)
 		return
 	}
 
-	pLong := req.URL.Query().Get("long")
-	pLongFloat, err := strconv.ParseFloat(strings.TrimSpace(pLong), 64)
-	if err != nil {
-		http.Error(w, "long parameter not specified", http.StatusBadRequest)
-		return
-	}
+	var centerTile = vendor.GetTile(params.Latitude, params.Longitude, params.Zoom)
 
-	pZoom := req.URL.Query().Get("zoom")
-	pZoomFloat, err := strconv.ParseFloat(strings.TrimSpace(pZoom), 64)
-	if err != nil {
-		http.Error(w, "zoom parameter not specified", http.StatusBadRequest)
-		return
-	}
-
-	pSide := req.URL.Query().Get("side")
-	if pSide == "" {
-		pSide = "3"
-	}
-	pSideInt, err := strconv.Atoi(pSide)
-	if err != nil {
-		http.Error(w, "side parameter not valid", http.StatusBadRequest)
-		return
-	}
-
-	if pSideInt < 1 || pSideInt > 10 {
-		http.Error(w, "side parameter must be side>1 and side<10", http.StatusBadRequest)
-		return
-	}
-
-	vendor, err := a.Providers.Get(pVendor)
-	if err != nil {
-		http.Error(w, "vendor param incorrect", http.StatusBadRequest)
-		return
-	}
-
-	if pZoomFloat < 1 || pZoomFloat > float64(vendor.MaxZoom()) {
-		http.Error(w, fmt.Sprintf("zoom paramater not valid. max zoom for provider %s - %d", vendor.Name(), vendor.MaxZoom()), http.StatusBadRequest)
-		return
-	}
-
-	tiles, err := downloader.StartMultiDownload(a.Cache, vendor, vendor.GetTile(pLatFloat, pLongFloat, pZoomFloat).GetNearby(pSideInt)...)
+	tiles, err := a.Downloader.Download(a.Cache, vendor, centerTile.GetNearby(params.Side)...)
 	if err != nil {
 		a.Logger.Error("error occurred when downloading tiles", zap.Error(err), zap.String("req_id", req.Header.Get("X-Request-ID")))
-		http.Error(w, fmt.Sprintf("error occurred when downloading tiles error=%s", err), http.StatusInternalServerError)
+
+		results, _ := json.Marshal(mapErrorModel{
+			Status: http.StatusInternalServerError,
+			Body:   fmt.Sprintf("error occurred when dowloading tiles: %s", err.Error()),
+		})
+
+		w.Header().Set("Content-Type", "application/json")
+		w.WriteHeader(http.StatusInternalServerError)
+		_, _ = w.Write(results)
 		return
 	}
 
-	merged, err := downloader.Merge(pSideInt, vendor.GetTile(pLatFloat, pLongFloat, pZoomFloat), tiles...)
+	merged, err := a.Downloader.Merge(params.Side, centerTile, tiles...)
 	if err != nil {
 		a.Logger.Error("error occurred when merging tiles", zap.Error(err), zap.String("req_id", req.Header.Get("X-Request-ID")))
-		http.Error(w, "error occurred when merging tiles", http.StatusInternalServerError)
+
+		results, _ := json.Marshal(mapErrorModel{
+			Status: http.StatusInternalServerError,
+			Body:   fmt.Sprintf("error occurred when merging tiles: %s", err.Error()),
+		})
+
+		w.Header().Set("Content-Type", "application/json")
+		_, _ = w.Write(results)
+		w.WriteHeader(http.StatusInternalServerError)
 		return
 	}
 
@@ -99,6 +85,88 @@ func (a *API) Map(w http.ResponseWriter, req *http.Request) {
 	if err != nil {
 		a.Logger.Error("error on merging image", zap.Error(err), zap.String("req_id", req.Header.Get("X-Request-ID")))
 	}
-	a.Logger.Info("new map download request", zap.String("lat", pLat), zap.String("long", pLong), zap.String("side", pSide), zap.String("vendor", pVendor), zap.String("req_id", req.Header.Get("X-Request-ID")))
 
+	a.Logger.Info("new map download request", zap.Float64("lat", params.Latitude), zap.Float64("long", params.Longitude), zap.Int("side", params.Side), zap.String("vendor", vendor.Name()), zap.String("req_id", req.Header.Get("X-Request-ID")))
+}
+
+type mapParams struct {
+	Latitude  float64
+	Longitude float64
+	Zoom      float64
+	Side      int
+}
+
+func (a *API) validateZoom(zoom float64, maxZoom int, vendorName string) error {
+	if zoom < 1 || zoom > float64(maxZoom) {
+		return fmt.Errorf("max zoom for provider %s - %d", vendorName, maxZoom)
+	}
+	return nil
+}
+
+func (a *API) parseRequest(req *http.Request) (*mapParams, provider.Provider, error) {
+
+	var params = mapParams{
+		Side: 3,
+	}
+
+	pVendor := req.URL.Query().Get("provider")
+	if pVendor == "" {
+		return nil, nil, fmt.Errorf("provider parameter error: not specified")
+	}
+
+	vendor, err := a.Providers.Get(pVendor)
+	if err != nil {
+		return nil, nil, fmt.Errorf("provider parameter error: %s not found", pVendor)
+	}
+
+	pLat := req.URL.Query().Get("lat")
+	params.Latitude, err = parseFloatParam(pLat)
+	if err != nil {
+		return nil, nil, fmt.Errorf("lat parameter error: %w", err)
+	}
+
+	pLong := req.URL.Query().Get("long")
+	params.Longitude, err = parseFloatParam(pLong)
+	if err != nil {
+		return nil, nil, fmt.Errorf("long parameter error: %w", err)
+	}
+
+	pZoom := req.URL.Query().Get("zoom")
+	params.Zoom, err = parseFloatParam(pZoom)
+	if err != nil {
+		return nil, nil, fmt.Errorf("zoom parameter error: %w", err)
+	}
+
+	if zoomErr := a.validateZoom(params.Zoom, vendor.MaxZoom(), vendor.Name()); zoomErr != nil {
+		return nil, nil, fmt.Errorf("zoom parameter error: %w", zoomErr)
+	}
+
+	pSide := req.URL.Query().Get("side")
+	if pSide != "" {
+		sideInt, err := strconv.Atoi(pSide)
+		if err != nil {
+			return nil, nil, fmt.Errorf("side parameter error: %w", err)
+		}
+
+		if sideInt < 1 || sideInt > a.MaxSide {
+			return nil, nil, fmt.Errorf("side parameter error: must be greater or equal to 1 and less than %d", a.MaxSide)
+		}
+		params.Side = sideInt
+	}
+
+	return &params, vendor, nil
+}
+
+func parseFloatParam(param string) (float64, error) {
+	valueStr := strings.TrimSpace(param)
+	valueFloat, err := strconv.ParseFloat(valueStr, 64)
+	if err != nil {
+		return 0, err
+	}
+
+	if valueStr == "" {
+		return 0, fmt.Errorf("not specified")
+	}
+
+	return valueFloat, nil
 }
